@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-10-26 r77334) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-10-29 r77335) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1616,7 +1616,7 @@ List of 2
 > ### ** Examples
 > 
 > pairs(swiss, panel = panel.smooth, pch = ".")  # emphasize the smooths
-> pairs(swiss, panel = panel.smooth, lwd = 2, cex = 1.5, col = "blue")  # hmm...
+> pairs(swiss, panel = panel.smooth, lwd = 2, cex = 1.5, col = 4)  # hmm...
 > 
 > 
 > 
@@ -2144,7 +2144,7 @@ N
 > points.default # to see how it calls "plot.xy(xy.coords(x, y), ...)"
 function (x, y = NULL, type = "p", ...) 
 plot.xy(xy.coords(x, y), type = type, ...)
-<bytecode: 0x25d9d80>
+<bytecode: 0x23f5ed0>
 <environment: namespace:graphics>
 > 
 > 
@@ -3014,7 +3014,7 @@ function (xy = 1, warn.log = TRUE)
     u <- par("usr")
     xy * c(u[2L] - u[1L], u[4L] - u[3L])/par("pin")
 }
-<bytecode: 0x3e76550>
+<bytecode: 0x3c9a008>
 <environment: namespace:graphics>
 > 
 > ## plot labels offset 0.12 inches to the right
@@ -3095,7 +3095,7 @@ function (xy = 1, warn.log = TRUE)
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  2.838 0.038 2.889 0 0 
+Time elapsed:  3.204 0.068 3.275 0 0 
 > grDevices::dev.off()
 null device 
           1 
